# DataLab

./: .coveragerc  .env.template  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  CobraDataLab.spec  CodraFT.spec  DataLab-Platform.code-workspace  DataLab-demo.bat  DataLab.bat  DataLab.code-workspace.template  DataLab.desktop  DataLab.spec  LICENSE  MANIFEST.in  README.md  conftest.py  create_dephash.py  dev.env  pip_list.txt  pyproject.toml  pyproject.tomlx  requirements-min.txt  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  doc_request.md  question.md  tutorial_request.md
.github/workflows/: _build.yml  pages.yml  python-package.yml  release-dryrun.yml  release-rc.yml  release.yml  test.yml  test_pyqt5.yml  test_pyqt6.yml
binder/: apt.txt  environment.yml  postBuild  requirements.txt  start  xfce4-desktop.xml
binder/Desktop/: DataLab.desktop  DataLab_dark.desktop  DataLab_light.desktop  Development version.desktop  install_dev_version.desktop
cdl/: __init__.py  app.py  baseproxy.py  config.py  env.py  info.py  obj.py  objectmodel.py  param.py  patch.py  plugins.py  proxy.py  remote.py  remotecontrol.py  start.pyw
cdl/adapters_plotpy/: __init__.py  base.py  converters.py  factories.py  image.py  signal.py
cdl/algorithms/: __init__.py  coordinates.py  datatypes.py  fit.py  image.py  signal.py
cdl/computation/: __init__.py  base.py  signal.py
cdl/core/: baseproxy.py  remote.py
cdl/data/: dependencies-py3-win32.txt
cdl/gui/: __init__.py  actionhandler.py  docks.py  h5io.py  macroeditor.py  main.py  newobject.py  objectview.py  plothandler.py  profiledialog.py  roieditor.py  settings.py  tour.py
cdl/h5/: __init__.py  common.py  generic.py  native.py  utils.py
cdl/plugins/: _readme_.txt  cdl_imageformats.py  cdl_plugin_testdata.py  cdl_testdata.py
cdl/tests/: __init__.py  all_tests.py  annotations_app.py  annotations_unit.py  auto_app.py  basic1_app.py  basic2_app.py  basic3_app.py  basic4_app.py  binning_unit.py  catcher_unit.py  centroid_unit.py  config_unit.py  conftest.py  contour_app.py  contour_unit.py  contrast_unit.py  data.py  demo.py  dictlistserial_app.py  embedded1_unit.py  embedded2_unit.py  enclosingcircle_unit.py  errormsgbox_unit.py  fft1d_app.py  fft1d_unit.py  fitdialog_unit.py  flatfield_app.py  h5_app.py  h5browser1_unit.py  h5browser2_unit.py  hough_circle_unit.py  imagetools_app.py  imagetools_unit.py  installconf_unit.py  io1_unit.py  io2_unit.py  io_app.py  io_unit.py  loadtest_gdi.py  (+31 more)
cdl/utils/: conf.py  dephash.py  io.py  misc.py  qthelpers.py  strings.py  tests.py  vistools.py
cdl/widgets/: connection.py  errormessagebox.py  filedialog.py  fileviewer.py  fitdialog.py  h5browser.py  imagebackground.py  importwizard.py  instconfviewer.py  logviewer.py  signalbaseline.py  signalcursor.py  signaldeltax.py  signalpeak.py  signalpeakdialog.py  status.py  textimport.py  warningerror.py  wizard.py
cdlapp/: __init__.py  app.py  config.py  env.py  obj.py  param.py  patch.py  plugins.py  proxy.py  start.pyw
cdlapp/algorithms/: fit.py  image.py  signal.py
cdlapp/core/: baseproxy.py  remote.py
cdlapp/plugins/: cdl_imageformats.py  cdl_testdata.py
cdlapp/tests/: __init__.py  all_tests.py  data.py
cdlapp/utils/: conf.py  misc.py  qthelpers.py  tests.py  vistools.py
cdlapp/widgets/: fileviewer.py  fitdialog.py  h5browser.py  instconfviewer.py  logviewer.py  signalpeakdialog.py  status.py  warningerror.py
codraft/: __init__.py  app.py  config.py  env.py  patch.py  plugins.py  remotecontrol.py  start.pyw
codraft/data/: dependencies-py3-win32.txt
codraft/tests/: __init__.py  all_tests.py  annotations_app.py  annotations_unit.py  auto_app.py  basic1_app.py  basic2_app.py  basic3_app.py  basic4_app.py  binning_unit.py  centroid_unit.py  config_unit.py  contour_app.py  contour_unit.py  contrast_unit.py  data.py  demo.py  dictlistserial_app.py  embedded1_unit.py  embedded2_unit.py  enclosingcircle_unit.py  fitdialog_unit.py  flatfield_app.py  h5_app.py  h5browser1_unit.py  h5browser2_unit.py  hough_circle_unit.py  imagetools_app.py  imagetools_unit.py  installconf_unit.py  io_app.py  (+29 more)
datalab/: __init__.py  app.py  baseproxy.py  config.py  env.py  objectmodel.py  plugins.py  proxy.py  remote.py  start.pyw
dev/: README.md  pip_list.txt  requirements.txt
doc/: cdl_remotecontrol_py27.py  codraft_remotecontrol_py27.py  conf.py  features_ima.rst  features_sig.rst  genreqs.py  h5browser.rst  index.rst  installation.rst  overview.rst  processor_methods_image.csv  processor_methods_nb.csv  processor_methods_signal.csv  remote_example.ipynb  remote_example.py  remotecontrol_py27.py  requirements.rst  roadmap.rst  update_processor_methods.py  update_requirements.py  update_screenshots.py  update_validation_status.py  validation_statistics.csv  validation_status.csv  validation_status_image.csv  validation_status_signal.csv
nsis/: installer.nsi
resources/: api-ms-win-core-path-l1-1-0.txt  dark_light_modes.pdn  deploy.bat  panorama.pdn
scripts/: Run-DataLabTests.config.template.psd1  Run-DataLabTests.ps1  _tests_.bat  build_dist.bat  build_doc.bat  build_doc_html.bat  build_exe.bat  build_ghpages.bat  build_installer.bat  build_resources.bat  build_resources.py  ci_release_helpers.py  clean_svg_icons.py  clean_up.bat  datalab_menus.txt  debug_svg_warnings.py  fix_svg_conflicting_attributes.py  generate_manifest.py  gettext.bat  gettext_scan.bat  internationalization_postprocess.py  internationalization_preprocess.py  preview_ghpages.bat  print_datalab_menus.py  pytest_gdi_probe.py  reinstall_dev.py  release.bat  release_win7.bat  run_all_tests.bat  run_black_isort.bat  run_coverage.bat  run_mypy.bat  run_pylint.bat  run_pytest.bat  run_pytest_on_all.bat  run_ruff.bat  run_test_launcher.bat  run_unittests.bat  run_with_env.py  update_doc_resources.bat  (+7 more)
sigima/: __init__.py  base.py  param.py  signal.py
sigima_/: __init__.py  config.py  env.py  param.py  signal.py  worker.py
wix/: DataLab-generic.wxs  generic-DataLab.wxs  license.rtf  makewxs.py
(+1491 files in other folders)
