# CodraFT setup configuration file

# Important note:
# Requirements (see [options]) are parsed by doc\genreqs.py to generate documentation

[metadata]
name = CodraFT
version = attr: codraft.__version__
author = Pierre Raybaut
author_email = p.raybaut@codra.fr
url = https://codra-ingenierie-informatique.github.io/CodraFT/
description = Signal and image processing software
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7, <4
install_requires =
    h5py>=3.0
    NumPy>=1.21
    SciPy>=1.7
    scikit-image>=0.18
    opencv-python>=4.5
    psutil>=5.5
    guidata>=2.3
    guiqwt>=4.3
    QtPy>=1.9
packages = find:
include_package_data = True

[options.exclude_package_data]
codraft = *.po, *.pot

[options.entry_points]
console_scripts =
    codraft-tests = codraft.tests:run
    codraft-demo = codraft.tests.demo:run
    codraft-alltests = codraft.tests.all_tests:run
gui_scripts =
    codraft = codraft.app:run

[options.extras_require]
dev =
    black
    isort
    pylint
    Coverage
